apps/yt/beetube/base/beetube-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beetube
  namespace: beetube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beetube
  template:
    metadata:
      labels:
        app: beetube
    spec:
      containers:
        - name: beetube
          image: bharathpadmaraju/tubelab:0.2.0
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: beetube
  namespace: beetube
spec:
  selector:
    app: beetube
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
