apps/yt/beetube/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: beetube
  namespace: beetube
spec:
  parentRefs:
    - name: main
      namespace: traefik
      sectionName: http
  hostnames:
    - beetube.beeslab.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: beetube
          port: 8080
